--- a/styles/style.css
+++ b/styles/style.css
@@ -9,17 +9,95 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+div {
+  border:1px solid red;
+}
+
+.flex-row {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
+}
+
+.header__logo_place_header {
+  width: 183px;
+  height: 32px;
+  position: absolute;
+  top: 30px;
+  left:64px;
+}
+
+.header__title {
+  width: 730px;
+  margin-left: 64px;
+}
+
+.header__text {
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  color: #000;
+
+}
+
+.subtitle {
+  width: 388px;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+}
+
+.subtitle__text {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  display: inline-block;
+  color: #000;
+}
+
+.header__link {
+  color: #2f80ed;
+}
+
+.main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.main-illustration__image {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
