--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,11 @@ div {
   flex-direction: column;
 }
 
+.no-margin-and-padding {
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   position: relative;
   height: 100vh;
@@ -95,4 +100,46 @@ div {
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.description {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.two-colums {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-colums__brief {
+  max-width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+  font-weight: normal;
+  margin: 0;
+}
+
+.two-colums__main-text {
+  min-width: 784px;
+  width: 80%;
+}
+
+.two-colums__paragraph {
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  margin: 0 0 30px;
+}
+
+.two-colums__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-colums__span-accent {
+  font-weight: bold;
 }
