--- a/styles/style.css
+++ b/styles/style.css
@@ -143,3 +143,60 @@ div {
 .two-colums__span-accent {
   font-weight: bold;
 }
+
+/* Digits */
+
+.digits {
+  margin: 0 auto 100px;
+}
+
+.digits__section-title {
+  margin: 0 auto 20px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.digits__section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.digits__table {
+  margin: 0 auto 100px;
+  width: 1100px;
+}
+
+.digits__table_flex-row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
+.table__cell {
+  width: 250px;
+}
+
+.table__heading {
+  margin: 0;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.table__text {
+  margin: 20px 0 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text:last-of-type {
+  margin-bottom: 0;
+}
