--- a/styles/style.css
+++ b/styles/style.css
@@ -200,3 +200,44 @@ div {
 .table__text:last-of-type {
   margin-bottom: 0;
 }
+
+/* Feynman */
+
+.feynman {
+  box-sizing: border-box;
+  height: 890px;
+  text-align: center;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position:0 100%;
+  background-size: 867px 637px;
+  padding-top: 100px;
+  position: relative;
+}
+
+.feyman__title {
+  width: 648px;
+  margin: 0 auto;
+  font-size: 120px;
+  line-height: 1.2;
+  font-weight: bold;
+}
+
+.feynman__sub-title {
+  margin: 70px auto 0;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  text-decoration: none;
+  font-weight: normal;
+  color: #2f80ed;
+  position: absolute;
+  top: 51%;
+  right: 48px;
+}
