--- a/styles/style.css
+++ b/styles/style.css
@@ -150,30 +150,29 @@ div {
   margin: 0 auto 100px;
 }
 
-.digits__section-title {
-  margin: 0 auto 20px;
-  width: 60%;
+.section-title {
+  margin: 100px auto 0;
+  max-width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
 }
 
-.digits__section-subtitle {
-  width: 60%;
-  margin: 0 auto;
+.section-subtitle {
+  margin: 20px auto 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
 }
 
-.digits__table {
+.table {
   margin: 0 auto 100px;
   width: 1100px;
 }
 
-.digits__table_flex-row {
+.table__row {
   display: flex;
   justify-content: space-between;
   margin-top: 60px;
@@ -181,6 +180,8 @@ div {
 
 .table__cell {
   width: 250px;
+  padding: 0;
+  margin: 0;
 }
 
 .table__heading {
@@ -241,4 +242,51 @@ div {
   top: 50%;
   right: 48px;
   transform: translateY(25%);
+}
+
+/* Kaufman */
+
+.kaufman {
+  position: relative;
+  overflow: hidden;
+  background-color: #1f1f1f;
+  z-index: 1;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin-top: 90px;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table_theme_dark {
+  margin-bottom: 90px;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+.table__row_theme_dark {
+  margin-top: 80px;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
 }
