--- a/styles/style.css
+++ b/styles/style.css
@@ -9,9 +9,9 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-div {
+/* div {
   border:1px solid red;
-}
+} */
 
 .flex-row {
   display: flex;
@@ -38,8 +38,15 @@ div {
   /* выше установили ограничения для секции */
 }
 
-.header__logo_place_header {
+.logo {
+  background-repeat: no-repeat;
+  background-size: contain;
   width: 183px;
+  background-position: center;
+}
+
+.logo_place_header {
+  background-image: url(../images/logo_place_header.svg);
   height: 32px;
   position: absolute;
   top: 30px;
@@ -73,6 +80,7 @@ div {
 
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -289,4 +297,79 @@ div {
   top: 0;
   right: -210px;
   z-index: -1;
+}
+
+/* footer */
+
+.footer {
+  background-color: #1f1f1f;
+  color:white;
+  min-height: 350px;
+  box-sizing: border-box;
+  padding-top: 60px;
+}
+
+.footer__colums {
+  width: 90%;
+  margin: 0 auto 40px;
+  display: flex;
+  justify-content: space-between;
+  min-height: 250px;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+  height: 35px;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0;
+}
+
+.footer__column_content_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0 16px;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  text-align: center;
+  transform: translateY(20%);
 }
