--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,6 @@
   border:1px solid red;
 } */
 
-.flex-row {
-  display: flex;
-}
-
-.flex-column {
-  display: flex;
-  flex-direction: column;
-}
-
-.no-margin-and-padding {
-  margin: 0;
-  padding: 0;
-}
 
 .header {
   position: relative;
@@ -50,7 +37,7 @@
   height: 32px;
   position: absolute;
   top: 30px;
-  left:64px;
+  left: 64px;
   z-index: 2;
 }
 
@@ -155,16 +142,17 @@
 /* Digits */
 
 .digits {
-  margin: 0 auto 100px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .section-title {
-  margin: 100px auto 0;
+  margin: 0 auto;
   max-width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-  text-align: center;
 }
 
 .section-subtitle {
@@ -176,7 +164,7 @@
 }
 
 .table {
-  margin: 0 auto 100px;
+  margin: 0 auto;
   width: 1100px;
 }
 
@@ -213,24 +201,25 @@
 /* Feynman */
 
 .feynman {
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
   height: 890px;
-  text-align: center;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-position:0 100%;
   background-size: 867px 637px;
-  padding-top: 100px;
   position: relative;
+  margin: 100px auto 0;
 }
 
 .feyman__title {
   width: 648px;
-  margin: 0 auto;
+  margin: 100px auto 0;
   font-size: 120px;
   line-height: 1.2;
   font-weight: bold;
+  text-align: center;
 }
 
 .feynman__sub-title {
@@ -255,15 +244,17 @@
 /* Kaufman */
 
 .kaufman {
+  display: flex;
+  flex-direction: column;
   position: relative;
   overflow: hidden;
   background-color: #1f1f1f;
   z-index: 1;
+  padding: 90px 0 90px;
 }
 
 .section-title_theme_dark {
   color: white;
-  margin-top: 90px;
 }
 
 .section-subtitle_theme_dark {
@@ -271,7 +262,6 @@
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
 }
 
 .table__cell_theme_dark {
@@ -302,16 +292,17 @@
 /* footer */
 
 .footer {
+  display: flex;
   background-color: #1f1f1f;
   color:white;
   min-height: 350px;
   box-sizing: border-box;
-  padding-top: 60px;
+  padding: 60px 0 40px;
 }
 
 .footer__colums {
   width: 90%;
-  margin: 0 auto 40px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   min-height: 250px;
