--- a/styles/style.css
+++ b/styles/style.css
@@ -90,12 +90,7 @@
 }
 
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
+
 
 .description {
   margin-top: 100px;
@@ -145,6 +140,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .section-title {
@@ -251,6 +247,7 @@
   background-color: #1f1f1f;
   z-index: 1;
   padding: 90px 0 90px;
+  align-items: center;
 }
 
 .section-title_theme_dark {
@@ -258,6 +255,11 @@
 }
 
 .section-subtitle_theme_dark {
+  color: white;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
   color: white;
 }
 
