--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,9 @@
 .table__row {
   display: flex;
   justify-content: space-between;
-  margin-top: 60px;
+  margin: 60px 0 0;
+  list-style: none;
+  padding: 0;
 }
 
 .table__cell {
@@ -199,7 +201,7 @@
 .feynman {
   display: flex;
   flex-direction: column;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
@@ -209,7 +211,7 @@
   margin: 100px auto 0;
 }
 
-.feyman__title {
+.feynman__title {
   width: 648px;
   margin: 100px auto 0;
   font-size: 120px;
@@ -276,12 +278,14 @@
 }
 
 .kaufman__triangle {
-  width: 877px;
-  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: 877px 877px;
   position: absolute;
   top: 0;
-  right: -210px;
   z-index: -1;
+  right: -210px;
+  width: 877px;
+  height: 877px;
 }
 
 /* footer */
@@ -303,10 +307,13 @@
   min-height: 250px;
 }
 
-.footer__column_content_copyright {
-  flex-basis: 711px;
+.footer__column {
   display: flex;
   flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
   justify-content: space-between;
 }
 
@@ -335,14 +342,9 @@
 }
 
 .footer__column-links {
-  display: flex;
-  flex-direction: column;
   margin: 20px 0 16px;
-}
-
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
+  list-style: none;
+  padding: 0;
 }
 
 .footer__column-link {
