--- a/styles/style.css
+++ b/styles/style.css
@@ -162,20 +162,18 @@
 .table {
   margin: 0 auto;
   width: 1100px;
-}
-
-.table__row {
   display: flex;
   justify-content: space-between;
-  margin: 60px 0 0;
   list-style: none;
   padding: 0;
+  flex-wrap: wrap;
 }
+
 
 .table__cell {
   width: 250px;
   padding: 0;
-  margin: 0;
+  margin: 60px 0 0;
 }
 
 .table__heading {
@@ -263,6 +261,7 @@
 .table__cell_theme_dark {
   width: 200px;
   color: white;
+  margin: 80px 0 0;
 }
 
 .table__heading_theme_dark {
@@ -271,10 +270,6 @@
 
 .table__text_theme_dark {
   color: white;
-}
-
-.table__row_theme_dark {
-  margin-top: 80px;
 }
 
 .kaufman__triangle {
