--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,24 @@
   border:1px solid red;
 } */
 
+@keyframes rotation {
+  0% {
+    transform: rotate(0);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+
+}
+
+.page_rotation {
+  animation: rotation 20s infinite linear;
+}
 
 .header {
   position: relative;
@@ -22,6 +40,7 @@
   display: flex;
   align-items: center;
   background-color: #f2f2f2;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -134,6 +153,86 @@
   font-weight: bold;
 }
 
+/*techniques*/
+
+.techniques {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 80%;
+  margin: 0 auto 100px;
+}
+
+.cards {
+  max-width: 920px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-column-gap: 100px;
+}
+
+.cards__item {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cards__image {
+  padding: 0 40px;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.cards__title {
+  margin-top: 43px;
+  margin-bottom: 16px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.cards__description {
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+}
+
+/* video */
+
+.video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.video__iframes {
+  margin: 0 auto;
+  font-size: 0;
+  transform: translateY(50px);
+}
+
+.video__iframe {
+  margin-right: 20px;
+}
+
+.video__iframe:last-of-type {
+  margin-right: 0;
+}
+
+/* oakley */
+
+.oakley {
+  padding: 160px 0 100px;
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+}
+
 /* Digits */
 
 .digits {
@@ -149,6 +248,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
+  text-align: center;
 }
 
 .section-subtitle {
@@ -157,6 +257,7 @@
   font-size: 24px;
   font-weight: normal;
   text-align: center;
+  max-width: 60%;
 }
 
 .table {
