--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,14 @@
   animation: rotation 20s infinite linear;
 }
 
+.page_link {
+  transition: opacity .1s linear .1s;
+}
+
+.page_link:hover {
+  opacity: 0.7;
+}
+
 .header {
   position: relative;
   height: 100vh;
@@ -227,16 +235,59 @@
 /* oakley */
 
 .oakley {
-  padding: 160px 0 100px;
+  padding: 160px 0 0;
   display: flex;
   justify-content: center;
   background-color: #f2f2f2;
 }
 
+/* Feynman */
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  min-height: 890px;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position:0 100%;
+  background-size: 867px 637px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 100px auto 0;
+  font-size: 120px;
+  line-height: 1.2;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__sub-title {
+  margin: 70px auto 0;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  transform: translateY(25%);
+  text-decoration: none;
+  color: #2f80ed;
+}
+
 /* Digits */
 
 .digits {
-  margin: 0 auto;
+  margin: 100px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -295,48 +346,83 @@
   margin-bottom: 0;
 }
 
-/* Feynman */
+/* khan */
 
-.feynman {
+.khan {
   display: flex;
   flex-direction: column;
-  min-height: 890px;
+  align-items: flex-start;
+  padding-top: 105px;
   background-color: #f2f2f2;
-  background-image: url(../images/feynman.png);
-  background-repeat: no-repeat;
-  background-position:0 100%;
-  background-size: 867px 637px;
-  position: relative;
-  margin: 100px auto 0;
 }
 
-.feynman__title {
-  width: 648px;
-  margin: 100px auto 0;
-  font-size: 120px;
-  line-height: 1.2;
+.khan__container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.khan__author {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.khan__title {
+  line-height: 1.15;
+  font-size: 60px;
   font-weight: bold;
-  text-align: center;
+  margin: 0;
 }
 
-.feynman__sub-title {
-  margin: 70px auto 0;
-  font-size: 36px;
-  line-height: 51px;
+.khan__quote {
+  max-width: 790px;
+  margin-top: 50px;
+  margin-bottom: 36px;
+  line-height: 34px;
+  font-size: 24px;
   font-weight: normal;
 }
 
-.feynman__link {
-  line-height: 51px;
-  font-size: 36px;
+.khan__quote-author {
+  margin-bottom: 10px;
+  margin-top: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.khan__quote-author-subline {
+  margin-top: 0;
+  margin-bottom: 68px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__book-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: start;
+}
+
+.khan__book-pic {
+  max-width: 620px;
+  max-height: 608px;
+  object-fit: contain;
+  object-position: left;
+  margin-right: 48px;
+}
+
+.khan__buy-link {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
   text-decoration: none;
-  font-weight: normal;
   color: #2f80ed;
-  position: absolute;
-  top: 50%;
-  right: 48px;
-  transform: translateY(25%);
 }
+
+
 
 /* Kaufman */
 
@@ -382,6 +468,22 @@
   right: -210px;
   width: 877px;
   height: 877px;
+}
+
+/* resources */
+
+.resources {
+  margin-top: 100px;
+}
+
+.resources__logo-zone {
+ max-width: 1100px;
+ margin: 80px auto 217px;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
 }
 
 /* footer */
@@ -450,6 +552,7 @@
   color: white;
   text-decoration: none;
 }
+
 .footer__social-icon {
   width: 16px;
   height: 16px;
