--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,4 +3,7 @@
   display: grid;
   grid-template-columns: repeat(3, auto);
   grid-column-gap: 100px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
