--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,8 @@
 .khan__book-pic {
-  max-width: 620px;
-  max-height: 608px;
-  object-fit: contain;
-  object-position: left;
+  width: 620px;
+  height: 608px;
+  object-fit: cover;
+  object-position: top;
   margin-right: 48px;
+  overflow: hidden;
 }
